[metadata]
name = w3rw
version = 0.1.30
url = https://github.com/teleprint-me/ledger-api
download_url = https://github.com/teleprint-me/ledger-api/releases/download/0.1.30/w3rw-0.1.30.tar.gz
project_urls =
    Bug Tracker = https://github.com/teleprint-me/ledger-api/issues
    Discussions = https://github.com/teleprint-me/ledger-api/discussions
    Documentation = https://github.com/teleprint-me/ledger-api/tree/main/docs
author = teleprint.me
author_email = noreply@teleprint.me
license = AGPL
description = Python Web3 Requests Wrapper
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
install_requires =
    python-dateutil
    requests
    web3
tests_require = pytest
keywords =
    web3
    requests
    wrapper
    rest
    api
    middleware
    trading
    client
    crypto
    currency
    ledger
    exchange
classifiers =
    Development Status :: 1 - Planning
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: AGPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[bdist_wheel]
universal=1
