[metadata]
name = w3rw
version = 0.2.6
url = https://github.com/teleprint-me/w3rw
download_url = https://github.com/teleprint-me/w3rw/releases/download/0.2.6/w3rw-0.2.6.tar.gz
project_urls =
    Bug Tracker = https://github.com/teleprint-me/w3rw/issues
    Discussions = https://github.com/teleprint-me/w3rw/discussions
    Documentation = https://github.com/teleprint-me/w3rw/tree/main/docs
author = teleprint.me
author_email = noreply@teleprint.me
license = AGPL
description = Python Web3 Requests Wrapper
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
install_requires =
    python-dateutil
    requests
    websocket-client
    web3
tests_require = pytest
keywords =
    web3
    requests
    wrapper
    rest
    api
    middleware
    trading
    client
    crypto
    currency
    ledger
    exchange
classifiers =
    Development Status :: 1 - Planning
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: AGPL License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[bdist_wheel]
universal=1
